cleaned up some lint warnings